[gd_scene load_steps=11 format=3 uid="uid://kjndx85ogngt"]

[ext_resource type="Script" path="res://Assets/BGM/SoundManager.gd" id="1_hnk5w"]
[ext_resource type="AudioStream" uid="uid://3dwoyeb326c6" path="res://Assets/brackeys_platformer_assets/sounds/explosion.wav" id="2_oooxw"]
[ext_resource type="AudioStream" uid="uid://dlg62eleehada" path="res://Assets/brackeys_platformer_assets/sounds/coin.wav" id="3_elbbe"]
[ext_resource type="AudioStream" uid="uid://dnyn0ks7nvjcb" path="res://Assets/brackeys_platformer_assets/sounds/power_up.wav" id="4_kbqlj"]
[ext_resource type="AudioStream" uid="uid://bgpp56slccmlp" path="res://Assets/brackeys_platformer_assets/sounds/hurt.wav" id="5_e7nok"]
[ext_resource type="AudioStream" uid="uid://bcr616ree18df" path="res://Assets/BGM/決定ボタンを押す10.mp3" id="6_biy8t"]
[ext_resource type="AudioStream" uid="uid://dt4w76j02bvwj" path="res://Assets/BGM/決定ボタンを押す32.mp3" id="7_wcly3"]
[ext_resource type="AudioStream" uid="uid://wfmo7c55lwdo" path="res://Assets/BGM/決定ボタンを押す31.mp3" id="8_bw5kp"]
[ext_resource type="AudioStream" uid="uid://crhdxjikqoxuw" path="res://Assets/BGM/軽いキック1.mp3" id="9_glejs"]
[ext_resource type="AudioStream" uid="uid://cefihcbjewo2u" path="res://Assets/BGM/「よろしく頼むぞ」.mp3" id="10_vg77y"]

[node name="SoundManager" type="Node2D"]
script = ExtResource("1_hnk5w")

[node name="PlatformBreak" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_oooxw")
bus = &"SFX"

[node name="PickCoin" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_elbbe")
volume_db = -20.0
bus = &"SFX"

[node name="PowerUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_kbqlj")
volume_db = -15.0
bus = &"SFX"

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_e7nok")
bus = &"SFX"

[node name="PlayerAttackSound" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="Startbutton" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_biy8t")
bus = &"SFX"

[node name="ChickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_wcly3")
bus = &"SFX"

[node name="Kochuksound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_bw5kp")
bus = &"SFX"

[node name="ShieldHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_glejs")
bus = &"SFX"

[node name="OldManYoroshiku" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_vg77y")
bus = &"SFX"
