extends Node


@onready var pick_coin = $PickCoin
@onready var platform_break = $PlatformBreak
@onready var power_up = $PowerUp
@onready var hurt = $Hurt
@onready var player_attack_sound = $PlayerAttackSound
@onready var startbutton = $Startbutton
@onready var chick_sound = $ChickSound
@onready var kochuksound = $Kochuksound
@onready var shield_hit_sound = $ShieldHitSound
@onready var old_man_yoroshiku = $OldManYoroshiku
